--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@ body {
 /* Typography */
 h1, h2 {
     font-weight: 600;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;  /* Reduced from 1.5rem */
     color: var(--text-color);
 }
 
