--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,7 @@ a:hover {
 
 /* Section spacing */
 section {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem; /* Adjusted section spacing */
 }
 
 /* Footer styling */
