--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     </header>
 
     {% for section in sections %}
-    <section class="mb-5">
+    <section>
         <h2>{{ section.title }}</h2>
         <div class="content">
             {{ section.content | safe }}
