--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
         <p class="lead">
             {{ current.focus }}
         </p>
+        <div class="social-links">
+            <a href="https://github.com/johndoe">GitHub</a> · 
+            <a href="https://linkedin.com/in/johndoe">LinkedIn</a> · 
+            <a href="https://twitter.com/johndoe">Twitter</a>
+        </div>
     </header>
 
     {% for section in sections %}
