--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,10 @@
             {{ current.location }} · {{ current.role }}
         </p>
         <div class="social-links">
-            <a href="https://github.com/johndoe">GitHub</a> · 
-            <a href="https://linkedin.com/in/johndoe">LinkedIn</a> · 
-            <a href="https://twitter.com/johndoe">Twitter</a>
+            {% for link in current.links %}
+            {% if not loop.first %} · {% endif %}
+            <a href="{{ link.url }}">{{ link.label }}</a>
+            {% endfor %}
         </div>
         <p class="lead">
             {{ current.focus }}
