--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,9 @@
             {{ current.location }} · {{ current.role }}
         </p>
         <div class="social-links">
-            {% for link in current.links %}
-            {% if not loop.first %} · {% endif %}
-            <a href="{{ link.url }}">{{ link.label }}</a>
-            {% endfor %}
+            <a href="https://github.com/johndoe">GitHub</a> · 
+            <a href="https://linkedin.com/in/johndoe">LinkedIn</a> · 
+            <a href="https://twitter.com/johndoe">Twitter</a>
         </div>
         <p class="lead">
             {{ current.focus }}
