Agent query: Are the social media links now showing your correct GitHub, LinkedIn, and Twitter URLs instead of the John Doe links?
Refactor social links to use a dynamic template.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/3c5736a1-8f89-4729-8f63-9b4bd9a5496e/0a985c0a-51be-4b2d-af07-f7eeac4fac9b.jpg

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
             {{ current.location }} · {{ current.role }}
         </p>
         <div class="social-links">
-            <a href="https://github.com/johndoe">GitHub</a> · 
-            <a href="https://linkedin.com/in/johndoe">LinkedIn</a> · 
-            <a href="https://twitter.com/johndoe">Twitter</a>
+            {% for link in current.links %}
+                <a href="{{ link.url }}">{{ link.label }}</a>{% if not loop.last %} · {% endif %}
+            {% endfor %}
         </div>
         <p class="lead">
             {{ current.focus }}
