--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,8 +6,8 @@
     --link-hover-color: #000;
     --border-color: #eee;
     --muted-color: #6c757d;
-    --window-bg: rgba(255, 255, 255, 0.85);
-    --gear-color: #000;
+    --window-bg: rgba(255, 255, 255, 0.9);
+    --pattern-color: #000;
 }
 
 /* Dark theme variables */
@@ -18,8 +18,8 @@
     --link-hover-color: #fff;
     --border-color: #333;
     --muted-color: #a0a0a0;
-    --window-bg: rgba(26, 26, 26, 0.85);
-    --gear-color: #fff;
+    --window-bg: rgba(26, 26, 26, 0.9);
+    --pattern-color: #fff;
 }
 
 /* Base styles */
@@ -34,7 +34,7 @@ body {
     overflow-x: hidden;
 }
 
-/* Background gear effect */
+/* Background pattern effect */
 body::before {
     content: "";
     position: fixed;
@@ -42,12 +42,13 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../css/gears.svg');
-    background-repeat: no-repeat;
+    background-image: url('../css/mechanical-pattern.svg');
+    background-repeat: repeat;
     background-position: center;
     background-size: cover;
     z-index: -1;
-    opacity: 0.5;
+    opacity: 0.4;
+    transition: opacity 0.3s;
 }
 
 /* Typography */
