Agent query: How does the new Leonardo da Vinci-inspired background look? Are the geometric patterns visible and properly inverting colors when switching between light and dark modes?
Update background pattern to a Da Vinci-inspired design with animated geometric motifs.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/3c5736a1-8f89-4729-8f63-9b4bd9a5496e/2b7869aa-a71a-4b6b-ba7f-3b884f56d239.jpg

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,13 +42,13 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../css/mechanical-pattern.svg');
+    background-image: url('../css/davinci-pattern.svg');
     background-repeat: repeat;
     background-position: center;
     background-size: cover;
     z-index: -1;
-    opacity: 0.6;
-    transition: opacity 0.3s;
+    opacity: 0.8;
+    transition: opacity 0.3s, background-color 0.3s;
 }
 
 /* Typography */
